--- a/_config.yml
+++ b/_config.yml
@@ -47,13 +47,25 @@ url: http://smgal.github.io
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: /
 
 #
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:title/
+source: .
+destination: ./_site
+permalink: /:title
+paginate: 3
+paginate_path: /page/:num/
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
