--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ title: "안영기의 개발실"
 # Name of your site (displayed in the header)
 name: smgal
 
+#disqus_url: smgal-github-io.disqus.com
+#disqus_id: 
+
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
 
