--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ title: "안영기의 개발실"
 # Name of your site (displayed in the header)
 name: smgal
 
-#disqus_url: smgal-github-io.disqus.com
-#disqus_id: 
+disqus_url: smgal-github-io.disqus.com
+disqus_id: smgal-github-io
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
