--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ name: smgal
 
 disqus_url: smgal-github-io.disqus.com
 disqus_id: smgal-github-io
+discus-identifier: smgal-github-io
 
 # Short bio or description (displayed in the header)
 description: Web Developer from Somewhere
